[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/ui/gui/GUI.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/font/RussoOne-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 28
extra_spacing_char = 3
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Assets/font/RussoOne-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 19
extra_spacing_char = 3
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Assets/font/ArizoneUnicaseRegular-5dRZ.ttf"

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Assets/font/RussoOne-Regular.ttf"

[sub_resource type="DynamicFont" id=8]
extra_spacing_char = 3
font_data = SubResource( 7 )

[node name="GUI" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GUI" type="Control" parent="."]
margin_left = 25.0
margin_top = 25.0
margin_right = 999.0
margin_bottom = 551.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmmoCount" type="Label" parent="GUI"]
margin_right = 924.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "AMMO: 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 25.0
margin_top = 25.0
margin_right = 999.0
margin_bottom = 551.0
custom_constants/separation = 0

[node name="CenterScore" type="CenterContainer" parent="VBoxContainer"]
margin_right = 974.0
margin_bottom = 34.0

[node name="ScoreLabel" type="Label" parent="VBoxContainer/CenterScore"]
margin_left = 477.0
margin_right = 496.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 34.0
margin_right = 974.0
margin_bottom = 526.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CenterContainer"]
margin_left = 316.0
margin_top = 147.0
margin_right = 658.0
margin_bottom = 345.0
custom_constants/separation = 34
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 342.0
margin_bottom = 24.0

[node name="MyHighscore" type="Label" parent="VBoxContainer/CenterContainer/VBoxContainer/VBoxContainer2"]
margin_right = 342.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 4 )
text = "your highscore: "
align = 1

[node name="Message" type="Label" parent="VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 342.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 6 )
text = "Game over"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 138.0
margin_right = 342.0
margin_bottom = 198.0
custom_constants/margin_right = 40
custom_constants/margin_left = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/CenterContainer/VBoxContainer/MarginContainer"]
margin_left = 40.0
margin_right = 302.0
margin_bottom = 60.0
custom_constants/separation = 8

[node name="PlayAgainButton" type="Button" parent="VBoxContainer/CenterContainer/VBoxContainer/MarginContainer/VBoxContainer2"]
margin_left = 69.0
margin_right = 192.0
margin_bottom = 26.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = SubResource( 8 )
shortcut_in_tooltip = false
text = "play again"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuButton" type="Button" parent="VBoxContainer/CenterContainer/VBoxContainer/MarginContainer/VBoxContainer2"]
margin_left = 68.0
margin_top = 34.0
margin_right = 194.0
margin_bottom = 60.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = SubResource( 8 )
shortcut_in_tooltip = false
text = "main menu"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/VBoxContainer/MarginContainer/VBoxContainer2/PlayAgainButton" to="." method="_on_PlayAgainButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/VBoxContainer/MarginContainer/VBoxContainer2/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
